fix broken link in 404 page

--- a/404.md
+++ b/404.md
@@ -7,4 +7,4 @@ title: 404 (Page not found)
 
 # about this....
 
-It looks like there is a problem with the URL you are looking for. Maybe you were looking for my <a href="{{ site.baseurl }}{% link /portfolio.md %}">portfolio</a> or <a href="{{ site.baseurl }}{{ site.baseurl }}{% link /cv.md %}">CV</a>?
+It looks like there is a problem with the URL you are looking for. Maybe you were looking for my <a href="{{ site.baseurl }}/portfolio">portfolio</a> or <a href="{{ site.baseurl }}/cv">CV</a>?
