--- a/404.md
+++ b/404.md
@@ -7,4 +7,9 @@ title: 404 (Page not found)
 
 # about this....
 
-It looks like there is a problem with the URL you are looking for. Maybe you were looking for my <a href="{{ site.baseurl }}/portfolio">portfolio</a> or <a href="{{ site.baseurl }}/cv">CV</a>?
+It looks like there is a problem with the URL you are looking for. Maybe you were looking for my {% for page in site.pages %}
+    {% if page.layout == "standard" or page.layout == "portfolio" %}
+<a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a>{% if forloop.first %} or {% endif %}
+    {% endif %}
+{% endfor %}
+?
