tweak 404 link generation

--- a/404.md
+++ b/404.md
@@ -9,7 +9,8 @@ title: 404 (Page not found)
 
 It looks like there is a problem with the URL you are looking for. Maybe you were looking for my {% for page in site.pages %}
     {% if page.layout == "standard" or page.layout == "portfolio" %}
-<a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a>{% if forloop.first %} or {% endif %}
+<a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a>
     {% endif %}
+    {% if forloop.first %} or {% endif %}
 {% endfor %}
 ?
