fix and simplify link logic

--- a/404.md
+++ b/404.md
@@ -3,14 +3,5 @@ layout: error
 title: 404 (Page not found)
 ---
 
-# Sorry
-
-# about this....
-
-It looks like there is a problem with the URL you are looking for. Maybe you were looking for my {% for page in site.pages %}
-    {% if page.layout == "standard" or page.layout == "portfolio" %}
-<a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a>
-    {% endif %}
-    {% if forloop.first %} or {% endif %}
-{% endfor %}
-?
+# Sorry about this...
+It looks like there is a problem with the URL you are trying to access. Maybe you were looking for my {% for page in site.pages %}{% if page.layout == "standard" %}<a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a> or {% elsif page.layout == "portfolio" %}<a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a>{% endif %}{% endfor %}?
