tidy liquid tags

--- a/404.md
+++ b/404.md
@@ -3,5 +3,14 @@ layout: error
 title: 404 (Page not found)
 ---
 
+{%- capture alternative-links -%}
+    {%- for page in site.pages -%}
+        {%- if page.layout == "standard" -%}
+            <a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a>{{ ' or ' }}
+        {%- elsif page.layout == "portfolio" -%}
+            <a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a>
+        {%- endif -%}
+    {%- endfor -%}
+{%- endcapture -%}
 # Sorry about this...
-It looks like there is a problem with the URL you are trying to access. Maybe you were looking for my {% for page in site.pages %}{% if page.layout == "standard" %}<a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a> or {% elsif page.layout == "portfolio" %}<a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a>{% endif %}{% endfor %}?
+It looks like there is a problem with the URL you are trying to access. Maybe you were looking for my {{ alternative-links }}?
